syntax = "proto3";

package wearable.v1;

option go_package = "github.com/norbybaru/go-proto-buf/gren/go/user/v1;wearablepb";

service WearableService {
  rpc BeatsPerMinute(BeatsPerMinuteRequest) returns (stream BeatsPerMinuteResponse) {};
}

message BeatsPerMinuteRequest {
  string uuid = 1;
}

message BeatsPerMinuteResponse {
  uint32 value  = 1;
  uint32 minute = 2;
}
